tests/paczka1/small_fuzzy/22614372.err
Error in line 2: I0Y344T A382 16,1
Error in line 3: I0Y344T A363 62,6
Error in line 5: 1OUAIEpYc A332 20,0
Error in line 11: iGoGwD A382 5,7
Error in line 14: iGoGwD A332 61,51
Error in line 8: S548 A332 52,3
